...
        android:layout_height="wrap_content" />
    <RadioGroup
        android:id="@+id/rg_metodos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/credito_btn"
            style="Widget.Material.CompoundButton.RadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/credito" />
        <RadioButton
            android:id="@+id/debito_btn"
...
            style="Widget.Material.CompoundButton.RadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/efectivo" />
    </RadioGroup>
    <Button
        android:id="@+id/select_btn"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/seleccionar_met"
        android:textAllCaps="false" />
</LinearLayout>
